--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thuy-Vy's Website</title>
+    <title>Thuy-Vy Tran</title>
 </head>
 <body>
-    <h1>Thuy-Vy's Website</h1>
+    <h1 id="title">Thuy-Vy's Website</h1>
     <p>This is a website about Thuy-Vy</p>
     <a href="https://www.google.com">Google</a>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
