--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thuy-Vy Tran</title>
+    <link rel="stylesheet" href="styles.css">   
 </head>
 <body>
     <h1 id="title">Thuy-Vy's Website</h1>
