took away a tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="title">Thuy-Vy's Website</h1>
-    <p id="title">This is a website about Thuy-Vy</p>
+    <p>This is a website about Thuy-Vy</p>
     
     <input type="text" placeholder="Enter your name">
     <ul></ul>
