--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
     <link rel="stylesheet" href="styles.css">   
 </head>
 <body>
-    <h1 id="title">Thuy-Vy's Website</h1>
-    <p>This is a website about Thuy-Vy</p>
-    
-    <input type="text" placeholder="Enter your name">
-    <ul></ul>
+    <div class = "container">
+        <h1 id="title">Hello, I'm Thuy-Vy Tran<3</h1>
+        <h2 id = "subtitle">CS at Columbia University & Aspiring SWE</h2>
+        <button id = "button">My Projects</button>
+    </div>
+    <div class = "container">
+        <h2>About Me</h2>
+        <img id = "profile-picture" src="profile.png" alt="Profile Picture">
+        <p id = "about-me">I'm a third year studying Computer Science at Columbia University.
+            I'm interested in software engineering (frontend, backend, full-stack, etc.) and game development.
+            My goal is to create digital spaces that are both aesthetically pleasing and functional.
+            I'm currently looking for a software engineering internship for summer 2026.
+            When I'm not coding, I enjoy skincare, makeup, and recording my grwm's on TikTok. 
+            I'm also interested in improving my Vietnamese and understanding my culture more.
+            Get to know me more below!
+        </p>
+    </div>
 </body>
 </html>
