replaced the personal dashboard project with ui-design plants project

--- a/index.html
+++ b/index.html
@@ -750,15 +750,16 @@
                 </div>
                 </a>
 
-                <a href="https://tvytran.github.io" target="_blank" class="project-card-link">
+                <a href="https://ui-design-plants.vercel.app/" target="_blank" class="project-card-link">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="lightblue.png" alt="Personal Dashboard" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                        <img src="plants.png" alt="Personal Dashboard" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                     </div>
-                    <h3 class="project-title">Personal Dashboard</h3>
+                    <h3 class="project-title">Interactive Plant Learning Application</h3>
                     <p class="project-desc">
-                        A modern, responsive personal dashboard built with HTML, CSS, and JavaScript featuring a glassmorphism design. 
-                        Includes social media integration, project showcase, skills display, and interactive elements with smooth animations and hover effects.
+                        Designed an educational web application featuring detailed information about four houseplants, including optimal room
+placement and care instructions. Implemented an interactive quiz module allowing users to virtually place plants in different room environments and
+receive immediate feedback.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">HTML</span>
