Added section navigation

--- a/index.html
+++ b/index.html
@@ -601,7 +601,6 @@
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             
             
@@ -618,7 +617,7 @@
 
     <div class="container">
         <!-- Header Section -->
-        <div class="glass-card header">
+        <div class="glass-card header" id="about">
             <div class="profile-image">
                 <img src="profile.png" alt="Thuy-Vy Tran" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
             </div>
@@ -632,7 +631,7 @@
         </div>
 
         <!-- Skills Section -->
-        <div class="glass-card">
+        <div class="glass-card" id="skills">
             <h2 class="section-title">Skills & Expertise</h2>
             <div class="skills-grid">
                 <div class="skill-item">
@@ -709,7 +708,7 @@
         </div>
 
         <!-- Projects Section -->
-        <div class="glass-card">
+        <div class="glass-card" id="projects">
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
                 <a href="https://vsacolumbia.com" target="_blank" class="project-card-link">
