redirect name cange

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="wrap" role="main">
     <h1>hi, I’m thuyvy.</h1>
     <p class="desc">click below to view my projects.</p>
-    <a class="btn" href="test.html#projects" aria-label="Go to projects">See my projects <span class="arrow">→</span></a>
+    <a class="btn" href="website.html#projects" aria-label="Go to projects">See my projects <span class="arrow">→</span></a>
 
   
   </main>
