--- a/index.html
+++ b/index.html
@@ -3,69 +3,83 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thuy Vy Tran | Hello</title>
+  <title>Thuy Vy Tran | Menu</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libertinus+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <style>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <style>
     :root {
-      --primary: #a7d8f7;
-      --primary-alt: #d0eaff;
-      --text: #333333;
-      --bg: #ffffff;
+      --mc-sky: #9bd3ff;
+      --mc-dark: #0c0c0c;
+      --mc-stone: #bdbdbd;
+      --mc-stone-dark: #7a7a7a;
+      --mc-stone-light: #e7e7e7;
+      --text: #2b2b2b;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     html, body { height: 100%; }
-    body {
-      font-family: 'Libertinus Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      background: var(--bg);
+        body {
+      font-family: 'Press Start 2P', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      background: var(--mc-sky);
       color: var(--text);
-      display: grid;
-      place-items: center;
-      padding: 2rem;
+      display: grid; place-items: center;
+            overflow: hidden;
+        }
+    /* Subtle vignette + noise for Minecraft vibe */
+    body::before{
+      content:""; position: fixed; inset: 0; pointer-events: none;
+      background:
+        radial-gradient(ellipse at center, rgba(0,0,0,0) 60%, rgba(0,0,0,0.35) 100%),
+        repeating-linear-gradient(0deg, rgba(255,255,255,0.02), rgba(255,255,255,0.02) 2px, rgba(0,0,0,0.01) 2px, rgba(0,0,0,0.01) 4px);
+      mix-blend-mode: multiply;
     }
-    .wrap {
+    .menu {
+      width: min(780px, 92vw);
       text-align: center;
-      max-width: 720px;
+      transform: translateY(-2vh);
     }
-    h1 {
-      font-size: clamp(1.8rem, 3.5vw, 2.5rem);
-      font-weight: 700;
-      margin-bottom: 1rem;
+        .title {
+      font-size: clamp(24px, 5vw, 56px);
+      color: #fff;
+      text-shadow: 6px 6px 0 #000, 0 0 24px rgba(0,0,0,0.35);
+      margin-bottom: 24px;
     }
-    p.desc {
-      font-size: clamp(1rem, 2.2vw, 1.2rem);
-      margin-bottom: 1.5rem;
-      opacity: 0.9;
+    .subtitle { color: #fff; opacity: .85; font-size: 14px; margin-bottom: 24px; text-shadow: 2px 2px 0 #000; }
+    .stack { display: grid; gap: 12px; width: min(520px, 92%); margin: 0 auto; }
+    .mc-btn {
+      display: block; width: 100%;
+      padding: 16px 18px;
+      background: linear-gradient(#cfcfcf, #bdbdbd);
+      color: #000; text-decoration: none;
+      border: 3px solid #000;
+      box-shadow: 6px 6px 0 #000;
+            position: relative;
+        }
+    .mc-btn::before, .mc-btn::after{
+      content:""; position:absolute; inset:0; pointer-events:none;
     }
-    a.btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      text-decoration: none;
-      font-weight: 700;
-      color: #0b3a53;
-      background: linear-gradient(180deg, var(--primary-alt), var(--primary));
-      border: 2px solid var(--primary);
-      padding: 0.75rem 1.25rem;
-      border-radius: 999px;
-      box-shadow: 0 8px 22px rgba(167,216,247,0.35);
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-    }
-    a.btn:hover { transform: translateY(-2px); box-shadow: 0 12px 28px rgba(167,216,247,0.45); }
-    .arrow { transition: transform 0.15s ease; display: inline-block; }
-    a.btn:hover .arrow { transform: translateX(3px); }
-
-  
-  </style>
+    /* Bevel: light top-left, dark bottom-right */
+    .mc-btn::before{ border-top: 4px solid var(--mc-stone-light); border-left: 4px solid var(--mc-stone-light); }
+    .mc-btn::after{ border-bottom: 4px solid var(--mc-stone-dark); border-right: 4px solid var(--mc-stone-dark); }
+    .mc-btn:hover { transform: translate(-2px,-2px); box-shadow: 8px 8px 0 #000; }
+    .row { display:flex; gap:12px; justify-content:center; margin-top: 12px; }
+    .small { width: 48%; }
+    .footer { position: fixed; bottom: 10px; left: 10px; color:#fff; opacity:.85; font-size:12px; text-shadow:2px 2px 0 #000; }
+    </style>
 </head>
 <body>
-  <main class="wrap" role="main">
-    <h1>hi, I’m thuyvy.</h1>
-    <p class="desc">click below to view my projects.</p>
-    <a class="btn" href="website.html#projects" aria-label="Go to projects">See my projects <span class="arrow">→</span></a>
-
-  
+  <main class="menu" role="main" aria-label="Minecraft style menu">
+    <h1 class="title">THUY VY TRAN</h1>
+    <div class="subtitle">CS Student at Columbia University</div>
+    <div class="stack">
+      <a class="mc-btn" href="website.html#about">About Me</a>
+      <a class="mc-btn" href="website.html#skills">Experience & Skills</a>
+      <a class="mc-btn" href="website.html#projects">Projects</a>
+      <div class="row">
+        <a class="mc-btn small" href="website.html#contact">Contact</a>
+        <a class="mc-btn small" href="https://github.com/tvytran" target="_blank" rel="noopener noreferrer">GitHub</a>
+        </div>
+    </div>
   </main>
 </body>
 </html>
