Revise job description for Frontend Developer role

--- a/website.html
+++ b/website.html
@@ -761,9 +761,9 @@
                 <h3>Frontend Developer</h3>
                 <span>Crackd.ai (Humor Project) | Remote</span>
                 <ul>
-                    <li>Developed frontend infrastructure for AI-powered image captioning platform with responsive UI components and real-time caption generation through large language models.</li>
-                    <li>Built automated content delivery pipeline supporting 3+ weekly social media posts with caption generation, quality filtering, and multi-platform distribution.</li>
-                    <li>Evaluated and refined LLM joke generation mechanisms, providing technical feedback on prompt engineering to improve caption quality for Gen‑Z audiences.</li>
+                    <li>Built AI-powered image captioning with 5+ responsive UI components and real-time LLM caption generation.</li>
+                    <li>Automated content pipeline supporting 3+ weekly posts across 4+ social media channels with quality filtering.</li>
+                    <li>Refined LLM joke generation through 50+ prompt iterations to improve caption quality for Gen-Z audiences.</li>
                 </ul>
                 <p><strong>Tech:</strong> React, TypeScript, LLM Integration, Next.js</p>
             </div>
