Revised ssystem infrasstrucutre

--- a/website.html
+++ b/website.html
@@ -772,9 +772,9 @@
                 <h3>Systems Infrastructure Intern</h3>
                 <span>Columbia University Computer Science | Manhattan, NY</span>
                 <ul>
-                    <li>Deployed backend dashboards monitoring 15,000+ data points/hour, optimizing server health tracking across 25+ distributed research machines via automation.</li>
-                    <li>Developed web-based system health tools and automated power usage tracking across 25+ distributed research servers.</li>
-                    <li>Collaborated with systems administrators to optimize infrastructure reliability, reducing manual ops by 40%.</li>
+                    <li>Built monitoring systems processing 15,000+ data points/hour across 25+ distributed research machines.</li>
+                    <li>Engineered Flask-based server health dashboard with LDAP authentication serving 50+ researchers real-time.</li>
+                    <li>Debugged 30+ Linux server issues resolving SSH, Docker, and network connectivity tickets for researchers.</li>
                 </ul>
                 <p><strong>Tech:</strong> Python, GitLab, Linux, Docker</p>
             </div>
