Changed TA description

--- a/website.html
+++ b/website.html
@@ -792,8 +792,9 @@
                 <h3>Student Leader</h3>
                 <span>Columbia Summer Engineering Program | Manhattan, NY</span>
                 <ul>
-                    <li>Assisted teaching competitive programming in Python, Java, and C++ to 20+ high school students across a 6-week program, improving problem-solving skills through 40+ coding challenges.</li>
-                    <li>Supported Data Science course for 15+ students, facilitating hands-on learning of Python libraries (pandas, NumPy) through 10+ data analysis projects and real-world datasets.</li>
+                    <li>Mentored 35+ students on 10+ data science projects using Python, pandas, and NumPy for data analysis.</li>
+                    <li>Guided 40+ students through 50+ competitive programming challenges in C++ and Java to develop OOP skills.</li>
+                    <li>Instructed 30+ students in intro to gaming course covering Unity, C#, and 3+ game development projects.</li>
                 </ul>
                 <p><strong>Tech:</strong> Python, pandas, NumPy, C++, Unity, C#</p>
             </div>
