adding new theme

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     <div class="subtitle">CS Student at Columbia University</div>
     <div class="stack">
       <a class="mc-btn" href="website.html#about">About Me</a>
-      <a class="mc-btn" href="website.html#skills">Experience & Skills</a>
+      <a class="mc-btn" href="website.html#experience">Experience</a>
+      <a class="mc-btn" href="website.html#skills">Skills</a>
       <a class="mc-btn" href="website.html#projects">Projects</a>
       <div class="row">
         <a class="mc-btn small" href="website.html#contact">Contact</a>
