added in another small project

--- a/website.html
+++ b/website.html
@@ -953,12 +953,22 @@
                         <span class="world-version">Stack: React</span>
                     </span>
                 </button>
-                <button type="button" class="world-item" data-href="https://github.com/tvytran/BobaEscapeGame">
+                <button type="button" class="world-item" data-href="https://github.com/tvytran/BobaRunGame">
                     <span class="world-thumb">
                         <img src="purple.png" alt="Text-Based Escape Room thumbnail" loading="lazy" width="200" height="120">
                     </span>
                     <span class="world-meta">
                         <span class="world-title">Text‑Based Escape Room</span>
+                        <span class="world-sub">Java OOP puzzle mechanics</span>
+                        <span class="world-version">Stack: Java</span>
+                    </span>
+                </button>
+                <button type="button" class="world-item" data-href="https://github.com/tvytran/BobaEscapeGame">
+                    <span class="world-thumb">
+                        <img src="text.png" alt="Text-Based Escape thumbnail" loading="lazy" width="200" height="120">
+                    </span>
+                    <span class="world-meta">
+                        <span class="world-title">Interactive Text-Based Escape Room Game</span>
                         <span class="world-sub">Java OOP puzzle mechanics</span>
                         <span class="world-version">Stack: Java</span>
                     </span>
