added molecule schrodinger project and privacy project

--- a/website.html
+++ b/website.html
@@ -933,6 +933,16 @@
         <div class="worlds-panel">
             <div class="worlds-title">Select Project</div>
             <div class="worlds-list" id="worldsList">
+                <button type="button" class="world-item selected" data-href="https://github.com/tvytran/Molecufind">
+                    <span class="world-thumb">
+                        <img src="molecufind.png" alt="Molecufind thumbnail" loading="lazy" width="200" height="120">
+                    </span>
+                    <span class="world-meta">
+                        <span class="world-title">Molecufind</span>
+                        <span class="world-sub">AI-powered molecule search engine</span>
+                        <span class="world-version">Stack: Python, LLM Integration, Flask</span>
+                    </span>
+                </button>
                 <button type="button" class="world-item selected" data-href="https://vsacolumbia.com">
                     <span class="world-thumb">
                         <img src="vsa.png" alt="VSA Website thumbnail" loading="lazy" width="200" height="120">
@@ -971,6 +981,16 @@
                         <span class="world-title">Interactive Text-Based Escape Room Game</span>
                         <span class="world-sub">Java OOP puzzle mechanics</span>
                         <span class="world-version">Stack: Java</span>
+                    </span>
+                </button>
+                <button type="button" class="world-item" data-href="https://privacy-app-mu.vercel.app/">
+                    <span class="world-thumb">
+                        <img src="privacy.png" alt="Privacy Method Finder thumbnail" loading="lazy" width="200" height="120">
+                    </span>
+                    <span class="world-meta">
+                        <span class="world-title">Privacy Method Finder</span>
+                        <span class="world-sub">Decision Tree to find best privacy method to protect data</span>
+                        <span class="world-version">Stack: HTML, CSS, JavaScript</span>
                     </span>
                 </button>
                         </div>
