changed boba run game

--- a/website.html
+++ b/website.html
@@ -1153,7 +1153,7 @@
                         <img src="purple.png" alt="Text-Based Escape Room thumbnail" loading="lazy" width="200" height="120">
                     </span>
                     <span class="world-meta">
-                        <span class="world-title">Text‑Based Escape Room</span>
+                        <span class="world-title">Boing Boing Boba</span>
                         <span class="world-sub">Java OOP puzzle mechanics</span>
                         <span class="world-version">Stack: Java</span>
                     </span>
