--- a/website.html
+++ b/website.html
@@ -1034,7 +1034,7 @@
             <p>My name is Thuy-Vy (Twee-Vee) Tran. I'm a Computer Science student at Columbia University's School of Engineering and Applied Sciences, with experience spanning from systems administration to frontend development.</p>
             <p>I'm passionate about exploring backend architecture and AI/ML, and I'm always looking for opportunities to expand my technical horizons.</p>
             <p>Outside of coding, you'll find me playing Minecraft (which inspired this site), practicing piano, or embracing my girly side.</p>
-            <p>I'm currently looking for a summer 2026 internship in software development or systems administration. Feel free to reach out to me at <a href="mailto:tvytran@columbia.edu">tvytran@columbia.edu</a> or
+            <p>I'm currently looking for a summer 2026 internship in software development or systems administration. Feel free to reach out to me at <a href="mailto:tvytran2@gmail.com">tvytran2@gmail.com</a> or
                  <a href="https://www.linkedin.com/in/thuy-vy-tran-876390288/">LinkedIn</a>!</p>
             </div>
         </div>
